--- a/proteins.html
+++ b/proteins.html
@@ -27,11 +27,47 @@
         </div>
         <div id="h2">
             <h2>Meet our Powerful Proteins!</h2>
-            <p>A balanced diet of tasty and healthy foods fuel your body and brain! Don't forget to balance the amount
-                of processed foods you eat too!</p>
+            <p>Flex your powers with thes Powerful Protein Pals!</p>
         </div>
         <main>
-        
+            <div class="flow">
+                <section>
+                    <div id="chic"></div>
+                </section>
+                <section>
+                    <h3>Meet Chic!</h3>
+                    <p>
+                        Chicken is a great type of lean protein! <br>
+                    </p>
+                </section>
+            </div>
+            <div class="flow">
+                <section>
+                    <div id="sammyprotein"></div>
+                </section>
+                <section>
+                    <h3>Meet Sammy the Salmon!</h3>
+                    <p>
+                        Sammy is super smart! <br>
+                        Along with being a powerful protein, the omega-3 fats in
+                        salmon and other fish are goof for your brain and heart!
+                    </p>
+                </section>
+            </div>
+            <div class="flow">
+                <section>
+                    <div id="eddie"></div>
+                </section>
+                <section>
+                    <h3>Meet Eddie Edemame!</h3>
+                    <p>
+                        Eddie is a plant-based protein! <br>
+                        Edamame and tofu lowers cholesterol, which is good for blood flow!
+                        They help your heart and brain function better!
+                    </p>
+                </section>
+            </div>
+        </main>
 
         <footer>
             <i>
