--- a/proteins.html
+++ b/proteins.html
@@ -32,6 +32,7 @@
         <main>
             <div class="flow">
                 <section>
+                    <h6 class="h6">Chic</h6>
                     <div id="chic"></div>
                 </section>
                 <section>
@@ -43,6 +44,7 @@
             </div>
             <div class="flow">
                 <section>
+                    <h6 class="h6">Sammy</h6>
                     <div id="sammyprotein"></div>
                 </section>
                 <section>
@@ -56,6 +58,7 @@
             </div>
             <div class="flow">
                 <section>
+                    <h6 class="h6">Eddie</h6>
                     <div id="eddie"></div>
                 </section>
                 <section>
