--- a/proteins.html
+++ b/proteins.html
@@ -5,6 +5,8 @@
     <title>Super Friends: Proteins</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learn why and how to include different proteins 
+    in your diet with simple tips guided by Super Friends' Chic, Sammy, and Eddie.">
     <link rel="stylesheet" href="super.css">
 </head>
 
@@ -23,7 +25,7 @@
             </ul>
         </nav>
 
-        <div id="homehero" class="hero">
+        <div id="proteinshero" class="hero">
         </div>
         <div id="h2">
             <h2>Meet our Powerful Proteins!</h2>
@@ -38,7 +40,11 @@
                 <section>
                     <h3>Meet Chic!</h3>
                     <p>
-                        Chicken is a great type of lean protein! <br>
+                        Chicken is a great type of lean protein! <br><br>
+                        Like many other animal-based protein, chicken help build healthy tissue, bones, and muscles!
+                        Be mindful that other meats or poultry may have more unhealthy fats than others.
+                        <br><br>
+                        1 small cooked chicken breast is about 3 oz-equiv of protein!
                     </p>
                 </section>
             </div>
@@ -50,9 +56,10 @@
                 <section>
                     <h3>Meet Sammy the Salmon!</h3>
                     <p>
-                        Sammy is super smart! <br>
+                        Sammy is super smart! <br><br>
                         Along with being a powerful protein, the omega-3 fats in
-                        salmon and other fish are goof for your brain and heart!
+                        salmon and other fish are goof for your brain and heart. <br><br>
+                        1 ounce of cooked finfish like salmon equal 1 oz-equiv of protein!
                     </p>
                 </section>
             </div>
@@ -62,16 +69,19 @@
                     <div id="eddie"></div>
                 </section>
                 <section>
-                    <h3>Meet Eddie Edemame!</h3>
+                    <h3>Meet Eddie Edamame!</h3>
                     <p>
-                        Eddie is a plant-based protein! <br>
+                        Eddie is a plant-based protein! <br><br>
                         Edamame and tofu lowers cholesterol, which is good for blood flow!
-                        They help your heart and brain function better!
+                        They help your heart and brain function better! <br><br>
+                        &frac14; cup of tofu equals 1 oz-equiv to protein!
                     </p>
                 </section>
             </div>
+            <br>
+            <h3>Click <a target="_blank" href="https://www.myplate.gov/eat-healthy/protein-foods">here</a> for more info
+                on proteins!</h3>
         </main>
-
         <footer>
             <i>
                 <small>Copyright &copy; 2025 Super Friends<br>
